ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: fitness-app-ingress

spec:

  ingressClassName: nginx

  rules:
  - http:

      paths:

      - path: /

        pathType: Prefix

        backend:

          service:

            name: fitness-app-service

            port:

              number: 80
